<resources>
    <string name = "RequestRealTimeData">0103C8000051BA56</string>>
    <string name="app_name">blecomm</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="menu_set_serial_port">Set Serial Port</string>
    <string name="menu_set_mtu">SetMTU</string>
    <string name="label_status_bluetooth">BLE：</string>
    <string name="info_no_device">No Device</string>
    <string name="label_status_serial">Serial Port：</string>
    <string name="info_no_serial">No Serial Port Information</string>
    <string name="radio_save_file">Save To File</string>
    <string name="radio_show_now">Realtime Show</string>
    <string name="receive_count">接收:</string>
    <string name="format">HEX</string>
    <string name="init_count">0 字节</string>
    <string name="receive_speed">速度:</string>
    <string name="receive_notify">System Status</string>
    <string name="label_save_file">Save to File：</string>
    <string name="clear">Clear</string>
    <string name="read">Read</string>
    <string name="share_data">Share</string>
    <string name="send_count">发送:</string>
    <string name="init_send">0 字节</string>
    <string name="send_speed">速度:</string>
    <string name="send_interval">Send Interval</string>
    <string name="interval_default">Default 10</string>
    <string name="interval_unit">ms</string>
    <string name="send_hint">Input</string>
    <string name="choose_file">Choose File</string>
    <string name="random_length">Random Length</string>
    <string name="to">to</string>
    <string name="length_min">1</string>
    <string name="length_max">20</string>
    <string name="send">Start</string>
    <string name="btn_set">Set</string>
    <string name="share">Share File</string>
    <string name="btn_set_send">Config</string>
    <string name="btn_set_receive">Save</string>
    <string name="btn_set_serial">Set Serial</string>
    <string name="device_list">Device list</string>
    <string name="close">Close</string>
    <string name="connect_ble">ConnectBle</string>
    <string name="disconnect_ble">Disconnect</string>
    <string name="model_monitor">Real Time Data</string>
    <string name="model_debug">Full Function</string>
    <string name="init_speed">0 字节/秒</string>
    <string name="input_digital">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ</string>
    <string name="input_digital_plus_1">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ+</string>
    <string name="send_interrupt">可靠传输模式</string>
    <string name="interrupt_desc">开启该模式每次发送前都会检查蓝牙缓冲区状态，只有该状态有效时才发送，该功能降低了发送速度但保证了数据传输的可靠性。
        如果关闭该模式，则数据会直接全部发送给蓝牙，不会检查缓冲区状态。</string>
    <string name="about">About</string>

    <string name="old_version">Not Latest BLE HardWare</string>
    <string name="RealTimeInfo_fragment_label">RealTimeInfo_Fragment</string>
    <string name="FaultInfo_fragment_label">FaultInfo_Fragment</string>
    <string name="ProtectionInfo_fragment_label">ProtectionInfo_Fragment</string>

    <string-array name="baud">
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
    </string-array>
    <string-array name="data">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>

    </string-array>
    <string-array name="stop">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="parity">
        <item>无</item>
        <item>奇校验</item>
        <item>偶校验</item>
        <item>标志位</item>
        <item>空白位</item>
    </string-array>
</resources>